--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/frontend/src/app.html
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/frontend/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" data-theme="retro">
+	<body data-sveltekit-preload-data="hover" data-theme="emerald">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
