Login and Logout page

--- a/src/zrb/runner/web_controller/session_page/partial/input.html
+++ b/src/zrb/runner/web_controller/session_page/partial/input.html
@@ -1,4 +1,4 @@
-<label>
+<label for="{task_input.name}">
   {task_input.prompt_message}
   {task_input.to_html(ctx)}
   <small id="{task_input.name}-helper">
