--- a/src/zrb/builtin/project/add/fastapp/fastapp_template/my_app_name/module/gateway/view/content/error.html
+++ b/src/zrb/builtin/project/add/fastapp/fastapp_template/my_app_name/module/gateway/view/content/error.html
@@ -1,6 +1,9 @@
 <main class="container">
     <article>
-        <h2>{{error_status_code}}</h2>
+        <h1>{{error_status_code}}</h1>
         <p>{{error_message}}</p>
+        <footer>
+            <a role="button" class="primary" href="/">🏠 Go Back</a>
+        </footer>
     </article>
 </main>
